--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ envlist = pytest,pylint,pep8
 basepython = python
 
 [testenv:pytest]
+setenv = 
+	PYTHONPATH=$PYTHONPATH:`pwd`
 deps =
     -rrequirements_dev.txt
 commands =
