--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ basepython = python
 
 [testenv:pytest]
 setenv = 
-	PYTHONPATH=$PYTHONPATH:`pwd`
+	PYTHONPATH={env:PYTHONPATH}{:}{toxdir}
 deps =
     -rrequirements_dev.txt
 commands =
