Add health endpoint

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,12 @@
-[tox]
-skipsdist = True
+kipsdist = True
 envlist = pytest,pylint,pep8
 
 [testenv]
 basepython = python
+setenv   =
+    PYTHONPATH = {toxinidir}
 
 [testenv:pytest]
-setenv   =
-    PYTHONPATH = {env:PYTHONPATH}{:}{toxinidir}
 deps =
     -rrequirements_dev.txt
 commands =
@@ -24,3 +23,4 @@ deps =
     -rrequirements_dev.txt
 commands =
     flake8 gm_analytics
+
