--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,10 @@ envlist = pytest,pylint,pep8
 
 [testenv]
 basepython = python
+setenv   =
+    PYTHONPATH = {toxinidir}
 
 [testenv:pytest]
-setenv = 
-	PYTHONPATH={env:PYTHONPATH}{:}{toxdir}
 deps =
     -rrequirements_dev.txt
 commands =
